# pageres_cli_api

./: .gitignore  README.md  __Dockerfile.prod  docker-compose.prod.yml  pyproject.toml
services/web/: Dockerfile.prod  requirements.txt
services/web/project/: __init__.py
