[tool.poetry]
name = "pageres_cli_api"
version = "0.1.0"
description = ""
authors = ["Patricio Serrano <serranomorantepatricio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
gunicorn = "^20.1.0"
Pillow = "^9.0.1"
selenium = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
